[project]
name = "harb-dialog-generator"
version = "0.1.0"
description = "Generate audio dialog from text using ElevenLabs API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elevenlabs>=1.0.0",
    "pydub>=0.25.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
